Fix scroll to top z-index

--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -159,7 +159,7 @@ p
 	position: absolute
 
 .elevated-z-index
-	// z-index: 3
+	z-index: 3
 
 .custom-gray-border
 	border-right: 1px solid #dee2e6
